SFDC Automation/src/objects/Survey__c.object
<CustomObject>
    <description>Used to house historical CSI and other survey data from before Salesforce Implementation (Feb 2011).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Historical_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field to store  the interviewer&apos;s commment</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the customer / branch.</description>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Historical_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failed_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to show that the survey is incomplete because of incorrect contact info</description>
        <label>Failed Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Creator__c</fullName>
        <label>Survey Creator</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <inlineHelpText>Indicates the date when the survey was conducted.</inlineHelpText>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>Unique identifier from Historical Data</description>
        <label>Survey_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <label>Survey Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ext_SurveyID__c</fullName>
        <description>Used for creating unique key on Ryder side for ETL jobs.</description>
        <externalId>true</externalId>
        <label>ext_SurveyID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Failed_surveys_bcoz_of_CSI_Max_Calls</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Status__c</columns>
        <columns>Survey_Date__c</columns>
        <columns>Survey_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CSI-Max Calls No Response</value>
        </filters>
        <label>Failed surveys bcoz of CSI-Max Calls</label>
    </listViews>
    <nameField>
        <label>Survey Campaign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>